# ticket-triage

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 35989c7d5d9e_create_initial_tables.py
app/: main.py
app/application/: transactional.py
app/application/commands/: create_ticket_command.py  create_triage_job_batch_command.py  create_triage_job_command.py  find_next_pending_triage_job_command.py  process_triage_job_batch_command.py  triage_ticket_command.py
app/application/usecases/ticket/: create_ticket_usecase.py
app/application/usecases/triage_job/: create_triage_job.py  create_triage_job_batch.py  find_next_pending_triage_job.py  triage_ticket.py  (+1 more)
app/config/: settings.py
app/domain/entities/: base_entity.py  owner.py  prompt.py  ticket.py  triage_job.py  triage_job_batch.py  triage_job_batch_item.py  triage_job_log.py
app/domain/enums/: ticket_triage_status.py  triage_job_batch_status.py  triage_job_status.py
app/domain/exceptions/: common_exception_code.py  conflict_exception.py  domain_exception.py  ticket_exception_code.py  triage_job_exception_code.py  unprocessable_entity_exception.py
app/domain/gateways/: llm_client_gateway.py  logger_gateway.py  unit_of_work_gateway.py
app/infrastructure/db/: session.py  unit_of_work.py
app/infrastructure/llm/: client.py
app/infrastructure/logging/: __init__.py  structured_logger.py
app/presentation/: exception_handlers.py
app/presentation/controllers/: ticket_controller.py  ticket_router.py  triage_job_controller.py  triage_job_router.py
(+64 files in other folders)
