[project]
name = "ticket-triage"
version = "0.0.1"
description = "AI ticket triage system"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.1",
    "dependency-injector>=4.48.3",
    "fastapi>=0.128.0",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "structlog>=25.5.0",
    "uvicorn>=0.40.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]
